--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -11,17 +11,6 @@
         <base href="{{ base_url }}">
         {{/if}}
 
-        <script async src="https://www.gstatic.com/brandstudio/kato/cookie_choice_component/cookie_consent_bar.v3.js"
-                data-autoload-cookie-consent-bar="true"></script>
-
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZN78TEJMRW"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-          gtag('config', 'G-ZN78TEJMRW');
-        </script>
-
         <!-- Custom HTML head -->
         {{> head}}
 
@@ -157,12 +146,12 @@
                           <li role="none"><button role="menuitem" class="theme">
                               <a id="en">English</a>
                           </button></li>
-                          <li role="none"><button role="menuitem" class="theme">
+                          {{!-- <li role="none"><button role="menuitem" class="theme">
                               <a id="pt-BR">Brazilian Portuguese</a>
                           </button></li>
                           <li role="none"><button role="menuitem" class="theme">
                               <a id="ko">한국어 (Korean)</a>
-                          </button></li>
+                          </button></li> --}}
                         </ul>
 
                         <script>
