Reformat index.hbs

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -151,10 +151,12 @@
                     <ul id="language-list" class="theme-popup" aria-label="Languages" role="menu">
                         <li role="none"><button role="menuitem" class="theme">
                                 <a id="en">English</a>
-                            </button></li>
+                            </button>
+                        </li>
                         <li role="none"><button role="menuitem" class="theme">
                                 <a id="de">Deutsch</a>
-                            </button></li>
+                            </button>
+                        </li>
                         {{!-- <li role="none"><button role="menuitem" class="theme">
                                 <a id="pt-BR">Brazilian Portuguese</a>
                             </button></li>
