feat(pdf): add pdf download link to menu bar top right
Signed-off-by: simonsan <14062932+simonsan@users.noreply.github.com>

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -227,6 +227,9 @@
                         <a href="{{ path_to_root }}print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
+                        <a href="{{ path_to_root }}rust-design-patterns.pdf" title="This book as a PDF" aria-label="This book as a PDF">
+                            <i id="open-pdf-button" class="fa fa-download"></i>
+                        </a>
                         {{/if}}
                         {{#if git_repository_url}}
                         <a href="{{git_repository_url}}" title="Git repository" aria-label="Git repository">
